# CGRA-Mapper

./: .gitignore  CMakeLists.txt  README.md  shell.nix
CGRA-Mapper-Rust/: Cargo.toml  Makefile
CGRA-Mapper-Rust/examples/: compare_extraction.rs  rewrite_rewrites.rs
CGRA-Mapper-Rust/src/: EggLib.cpp  EggLib.h  cost.rs  greedy_extractor.rs  lib.rs  rules.rs  serialize.rs
InContext/Benchmarks/: .gitignore  README.md  Working  compile.sh  plot.py  run_all_in_context_benchmarks.sh  run_in_context.sh
InContext/Benchmarks/A5_output/: BenchmarkTimes  LoopIters  LoopTimes  LoopTimesBicg
InContext/Benchmarks/adpcm_coder/: dfg.json  flexc_loop.c
InContext/Benchmarks/adpcm_decoder/: flexc_loop.c
InContext/Benchmarks/bicg/: bicg.h  config.json  flexc_loop.c
InContext/Benchmarks/blowfish/: config.json  flexc_loop.c
InContext/Benchmarks/conv/: flexc_loop.c
InContext/Benchmarks/dtw/: config.json  flexc_loop.c
InContext/Benchmarks/fft/: fft.c  flexc_loop.c
InContext/Benchmarks/fir/: flexc_loop.c
InContext/Benchmarks/gemm/: config.json  flexc_loop.c
InContext/Benchmarks/histogram/: config.json  flexc_loop.c
InContext/Benchmarks/latnrm/: config.json  flexc_loop.c
InContext/Benchmarks/livermorec10/: flexc_loop.c
InContext/Benchmarks/livermorec11/: flexc_loop.c
InContext/Benchmarks/livermorec13/: flexc_loop.c
InContext/Benchmarks/livermorec19/: flexc_loop.c
InContext/Benchmarks/livermorec2/: flexc_loop.c
InContext/Benchmarks/livermorec20/: flexc_loop.c
InContext/Benchmarks/livermorec21/: flexc_loop.c
InContext/Benchmarks/livermorec22/: flexc_loop.c
InContext/Benchmarks/livermorec23/: flexc_loop.c
InContext/Benchmarks/livermorec8/: flexc_loop.c
InContext/Benchmarks/mvt/: flexc_loop.c
InContext/Benchmarks/relu/: flexc_loop.c
InContext/Benchmarks/spmv/: flexc_loop.c
InContext/Benchmarks/susan/: flexc_loop.c  susan.c
InContext/Benchmarks/susan2/: flexc_loop.c
Loops4/: loop_DarkNet_109.c  loop_DarkNet_1195.c  loop_DarkNet_1196.c  loop_DarkNet_1237.c  loop_DarkNet_1238.c  loop_DarkNet_1239.c  loop_DarkNet_1240.c  loop_DarkNet_1298.c  loop_DarkNet_1299.c  loop_DarkNet_1306.c  loop_DarkNet_1363.c  loop_DarkNet_1364.c  loop_DarkNet_1368.c  loop_DarkNet_1369.c  loop_DarkNet_1370.c  loop_DarkNet_1371.c  loop_DarkNet_1372.c  loop_DarkNet_1383.c  loop_DarkNet_1384.c  loop_DarkNet_1385.c  loop_DarkNet_1386.c  loop_DarkNet_1404.c  loop_DarkNet_1405.c  loop_DarkNet_1406.c  loop_DarkNet_1480.c  loop_DarkNet_1481.c  loop_DarkNet_1667.c  loop_DarkNet_1707.c  loop_DarkNet_1737.c  loop_DarkNet_1738.c  loop_DarkNet_1794.c  loop_DarkNet_196.c  loop_DarkNet_243.c  loop_DarkNet_309.c  loop_DarkNet_407.c  loop_DarkNet_408.c  loop_DarkNet_507.c  loop_DarkNet_508.c  loop_DarkNet_624.c  loop_DarkNet_634.c  (+1773 more)
LoopsDB/: loader.py
RunnableLoops/: .gitignore  README.md  benchmark_cgras.sh  benchmark_cgras_slurm.sh  deleted_loops  execute_slurm_benchmark_cgras.sh  extract_runnable_loops.py  fix_ii_file.py  fixit.sh  plot_speedups.py  speedups.eps  utils.c  utils.h
RunnableLoops/data/: A5  A5.iterations  A5.times  README.md
RunnableLoops/output/loops/: 1001681443085450725.c  1006557652686854582.c  1019819604455077547.c  1020924651129497732.c  1022573468199777757.c  1022584202295288301.c  1027842325524657110.c  102968336402720699.c  1033190085784466428.c  1038599916614120543.c  1039308705179296070.c  1042586033276246869.c  1048963733373843556.c  1056573000678142091.c  1061841015908442166.c  (+1586 more)
benchmark_scripts/: .gitignore  README.md  estimate_cgra_perforamnce.sh  estimate_performance.sh  get_and_build_clang.sh  get_case_study_results.sh  get_compile_times.sh  plot_compile_times.py  plot_performance_graph.py
benchmark_scripts/architectures/: README.md  benchmark_architectures.sh  cca.json  generate_rules_table.py  maeri.json  plot_case_studies.py  plot_case_studies_rules.py  revamp.json  sc-cgra.json
src/: CGRA.cpp  CGRA.h  CGRALink.cpp  CGRANode.cpp  CGRANode.h  CMakeLists.txt  DFG.cpp  DFG.h  DFGEdge.cpp  DFGEdge.h  DFGNode.cpp  DFGNode.h  EGraphRewriter.cpp  EGraphRewriter.h  MapAlgorithms.cpp  MapAlgorithms.h  MapResult.cpp  MapResult.h  Mapper.cpp  Mapper.h  OperationMap.cpp  OperationMap.h  Options.cpp  Options.h  Rewriter.cpp  Rewriter.h  Rewriter.hpp  Rules  RustConversion.cpp  RustConversion.h  RustTypes.cpp  RustTypes.h  mapFromDFG.cpp  mapperPass.cpp
test/: .gitignore  README.md  build_param.sh  build_rules.sh  compile.sh  config.json  dfg.json  egraph_dumps_diff.sh  execute_slurm.sh  get_egraph_dumps.py  get_egraph_dumps.sh  get_number_of_operations.py  get_results_by_benchmark.py  get_results_by_benchmark.sh  kernel.cpp  param.json  param_baseline.json  param_example.json  param_skeleton  param_skeleton_a5_latencies  param_static.json  plot_compile_times.sh  plot_compile_times_new.py  plot_successes.py  plot_successes_by_benchmark.py  reducer.py  reproduce_03_08.sh  run.sh  run_against_architectures.sh  run_against_architectures.sh_slurm.sh  run_all_benchmarks.sh  run_all_benchmarks_slurm.sh  run_tests_against.sh
