[package]
name = "CGRA-Mapper-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "EggLib"
crate-type = ["dylib"]

[dependencies]
#egg = "0.7.1"
egg = { git = "https://github.com/Bastacyclop/egg/", rev = "e574ff272ebfddedb180dcdb55f987fad3e97dc6", features = ["lp"] }
libc = "0.2"
tinyjson = "2"
