[package]
name = "CGRA-Mapper-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "EggLib"
crate-type = ["dylib", "rlib"]

#[profile.release]
#debug = true
#[profile.bench]
#debug = true

[dependencies]
egg = { git = "https://github.com/Bastacyclop/egg/", rev ="22657cb0942c16cb71c48345538394cbd60155ab", features = ["lp"] }
#egg = { path = "../../egg", features = ["lp"] }
libc = "0.2"
tinyjson = "2"
serde_json = "1.0"
clap = "3.0"

[dependencies.egraph-serialize]
git = "https://github.com/egraphs-good/egraph-serialize"
rev = "951b829a434f4008c7b45ba4ac0da1037d2da90"

[dependencies.uuid]
verion = "1.4.1"
features = [
 "v4",
 "fast-rng",
 "macro-diagnostics"
]

